Atualizações no site.
Inseri imagens no site.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
    <head>
-       <title>Exercício 3</title>
+       <title>Exerc4 - Inserindo Imagens</title>
    </head>
 
    <body>
@@ -15,19 +15,24 @@
 
 
         <ol>
-        <li><font face="calibri", size="4"><b>Porto Alegre</b>
+
+        <li><font face="calibri", size="4">Porto Alegres
          <ul>
             <li>Casa de Cultura Mário Quitana
             <li>Jardim Botânico
             <li>Parque Maurício Sirotsky Sobrinho
-            <li>Lago Guaíba    
+            <li>Lago Guaíba  
+               <br>
+               <img src="Porto_Alegre.jpg">  
          </ul>
-        <li><b>Manaus</b>
+        <li>Manaus
           <ul>
            <li>Encontro das águas
             <li>Palácio Rio Negro
             <li>Centro Cultural dos Povos da Amazônia
-           <li>Teatro Amazonas         
+           <li>Teatro Amazonas   
+            <br>
+            <img src="Manaus.jpg">    
             </ul>   
         </ol>
        <p><font color="red"><i>Independente da cidade escolhidas, você terá opções maravilhosas para curtir suas férias.</i></p> 
